styling and gitignore update

--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
-  "name": "bark-eology",
+  "name": "barke-ology",
   "version": "1.0.0",
   "description": "A borking interface for our furreal friends.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon ./src/server/server.js"
+    "start": "nodemon ./src/server/server.js",
+    "build": "webpack --watch --mode production",
+    "dev": "webpack --mode development"
   },
   "repository": {
     "type": "git",
@@ -21,9 +23,24 @@
   },
   "homepage": "https://github.com/YY-Huang/bark-eology#readme",
   "dependencies": {
+    "body-parser": "^1.18.3",
+    "cookie-parser": "^1.4.3",
+    "cors": "^2.8.4",
     "express": "^4.16.3",
     "fs": "0.0.1-security",
-    "nodemon": "^1.18.3",
-    "path": "^0.12.7"
+    "nodemon": "^1.18.3"
+  },
+  "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.5",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
+    "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^3.2.0",
+    "react": "^16.4.2",
+    "react-dom": "^16.4.2",
+    "webpack": "^4.17.1",
+    "webpack-cli": "^3.1.0"
   }
 }
