--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "cors": "^2.8.4",
     "express": "^4.16.3",
     "fs": "0.0.1-security",
-    "nodemon": "^1.18.3"
+    "nodemon": "^1.18.3",
+    "react-router-dom": "^4.3.1"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
