--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "cookie-parser": "^1.4.3",
+    "es6-promise": "^4.2.4",
     "express": "^4.16.3",
     "fs": "0.0.1-security",
+    "isomorphic-fetch": "^2.2.1",
     "nodemon": "^1.18.3",
     "pg": "^7.4.3",
     "react-router-dom": "^4.3.1"
