--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "isomorphic-fetch": "^2.2.1",
     "nodemon": "^1.18.3",
     "pg": "^7.4.3",
-    "react-router-dom": "^4.3.1"
+    "react-router-dom": "^4.3.1",
+    "whatwg-fetch": "^2.0.4"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
