--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "barke-ology",
+  "name": "barkeology",
   "version": "1.0.0",
   "description": "A borking interface for our furreal friends.",
   "main": "index.js",
@@ -25,7 +25,6 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "cookie-parser": "^1.4.3",
-    "es6-promise": "^4.2.4",
     "express": "^4.16.3",
     "fs": "0.0.1-security",
     "isomorphic-fetch": "^2.2.1",
